* updated package.json and added grunt file.

--- a/zui/package.json
+++ b/zui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zuimobole",
+  "name": "zui.m",
   "title": "ZUI for mobile",
   "version": "0.1.0-beta",
   "description": "为移动应用开发而生。",
