--- a/zentao/manifest.json
+++ b/zentao/manifest.json
@@ -17,24 +17,24 @@
         "url": ""/*可选，开发者自定义地址*/
     },
     "permissions": {
-        "Accelerometer": {
+/*        "Accelerometer": {
             "description": "访问加速度感应器"
         },
         "Audio": {
             "description": "访问麦克风"
-        },
+        },*/
         "Cache": {
             "description": "管理应用缓存"
         },
-        "Camera": {
+/*        "Camera": {
             "description": "访问摄像头"
-        },
+        },*/
         "Console": {
             "description": "跟踪调试输出日志"
         },
-        "Contacts": {
+/*        "Contacts": {
             "description": "访问系统联系人信息"
-        },
+        },*/
         "Device": {
             "description": "访问设备信息"
         },
@@ -47,16 +47,16 @@
         "File": {
             "description": "访问本地文件系统"
         },
-        "Gallery": {
+/*        "Gallery": {
             "description": "访问系统相册"
         },
         "Geolocation": {
             "description": "访问位置信息"
-        },
+        },*/
         "Invocation": {
             "description": "调用Native JS桥功能"
         },
-        "Messaging": {
+/*        "Messaging": {
             "description": "访问通讯能力"
         },
         "Orientation": {
@@ -64,7 +64,7 @@
         },
         "Proximity": {
             "description": "访问距离感应器"
-        },
+        },*/
         "Storage": {
             "description": "管理应用本地数据"
         },
@@ -80,7 +80,7 @@
         "XMLHttpRequest": {
             "description": "跨域网络访问"
         },
-        "Zip": {
+/*        "Zip": {
             "description": "文件压缩与解压缩"
         },
         "Barcode": {
@@ -91,16 +91,16 @@
         },
         "Payment": {
             "description": "管理支付插件"
-        },
+        },*/
         "Push": {
             "description": "管理推送消息插件"
         },
         "Share": {
             "description": "管理社交分享插件"
         },
-        "Speech": {
+/*        "Speech": {
             "description": "管理语音识别插件"
-        },
+        },*/
         "Statistic": {
             "description": "管理统计插件"
         }
